--- a/config/site.yml
+++ b/config/site.yml
@@ -1,5 +1,5 @@
 title: 'Morfy'
-description: 'Simple and fast file-based CMS'
+description: 'Modern Open Source Flat-File Content Management System'
 keywords: 'morfy, cms, php, filesystem'
 url: 'http://morfy.org'
 author:
