--- a/.htaccess
+++ b/.htaccess
@@ -31,7 +31,7 @@ AddDefaultCharset UTF-8
 	## End - Rewrite rules to block out some common exploits.
 
 	## Begin - Rewrite rules for Morfy
-	RewriteBase /morfy.org/
+	RewriteBase /
 	RewriteCond %{REQUEST_FILENAME} !-f
 	RewriteCond %{REQUEST_FILENAME} !-d
 	RewriteRule ^(.*)$ index.php [QSA,L]
