--- a/themes/default/default.yml
+++ b/themes/default/default.yml
@@ -5,8 +5,8 @@ author:
   name: Sergey Romanenko
   email: awilum@msn.com
   url: https://github.com/Awilum
-homepage: https://github.com/fansoro-cms/fansoro
-bugs: https://github.com/fansoro-cms/fansoro/issues
+homepage: https://github.com/fansoro/fansoro
+bugs: https://github.com/fansoro/fansoro/issues
 license: MIT
 
 # Theme settings
